--- a/src/components/softwareSkills/SoftwareSkill.scss
+++ b/src/components/softwareSkills/SoftwareSkill.scss
@@ -7,12 +7,20 @@
   margin-bottom: 0px;
   margin-top: 0px;
   text-align: center;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  gap: 20px;
+  justify-items: center;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .software-skill-inline {
-  display: inline-block;
-  margin-right: 20px;
-  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
 }
 
 .software-skill-inline > i {
